fix(app): overflowing

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import "sass/variables.scss";
+@import 'sass/variables.scss';
 
 *,
 *::before,
@@ -13,9 +13,7 @@
   box-sizing: border-box;
 }
 
-
 body {
-  height: 100vh;
   color: $font-color;
   font-family: $Noto;
 }
@@ -24,15 +22,3 @@ body {
   display: flex;
 }
 
-.nav {
-  height: 100vh;
-  min-width: 25%;
-  background-color: $main-bg-color;
-  border-right: 0.5px solid $black;
-  padding: 3rem;
-
-  header {
-    display: flex;
-    align-items: stretch;
-  }
-}
